Archive2/b1/2a579f6862576c/output
main.cpp:4:10: error: expected declaration specifiers or '...' before '*' token
 char foo(*char aLtr, int caseCmd)
          ^
main.cpp: In function 'main':
main.cpp:46:5: error: implicit declaration of function 'foo' [-Wimplicit-function-declaration]
     cas=foo(*z,2);
     ^
